Fix spacing of sidebar (#22)

--- a/dna-frontend/src/app/core/components/sidebar/sidebar.component.scss
+++ b/dna-frontend/src/app/core/components/sidebar/sidebar.component.scss
@@ -7,6 +7,6 @@ h3 {
   margin-left: 0.25em;
 }
 
-#client-label {
-  margin-top: 1em;
+.nav-label {
+  height: 2em;
 }
